attempt to fix affix on small screen2

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
-@media (min-width: 768px) {
+@media (max-width: 767px) {
     .affix {
-        position: fixed;
+        position: static;
     }
 }
